updating web service and html

--- a/web_app/templates/patient.html
+++ b/web_app/templates/patient.html
@@ -19,7 +19,7 @@
 		{% endif %}
 	</div>
 	<div class="patient-history">
-		<img src="{{ url_for('static', filename='img/patient_history.jpg') }}" />
+		<img src="{{ url_for('static', filename='img/patient_history2.jpg') }}" />
 	</div>
 	<div class="patient-scan">
 		<div class="scan-info">
